--- a/packages/admin/src/index.css
+++ b/packages/admin/src/index.css
@@ -1,21 +1,9 @@
-@font-face {
-  font-family: 'Inter';
-  src: url('./fonts/Inter/Inter-SemiBold.woff') format('woff');
-  font-weight: 600;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Inter';
-  src: url('./fonts/Inter/Inter-Medium.woff') format('woff');
-  font-weight: 500;
-  font-style: normal;
-}
 html {
   font-size: 16px;
   line-height: 1.25em;
-  font-family: 'Inter', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI',
+  font-family: 'sans-serif', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI',
     'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-    'Helvetica Neue', sans-serif;
+    'Helvetica Neue', 'sans-serif';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -27,8 +15,8 @@ body {
   overflow: hidden;
 }
 code {
-  font-family: 'source-code-pro', 'Menlo', 'Monaco', 'Consolas',
-    'Courier New', monospace;
+  font-family: 'source-code-pro', 'Menlo', 'Monaco', 'Consolas', 'Courier New',
+    monospace;
 }
 #root {
   display: flex;
